--- a/trabalho_final/bibliografia.bib
+++ b/trabalho_final/bibliografia.bib
@@ -1,4 +1,3 @@
-% This file was created with JabRef 2.10.
 % Encoding: UTF-8
 
 
@@ -76,3 +75,10 @@
   Timestamp                = {2016.09.19}
 }
 
+@Electronic{mnistlecunn,
+  author = {Yann LeCun, Corinna Cortes and Christopher J.C. Burges},
+  year   = {1999},
+  url    = {http://yann.lecun.com/exdb/mnist/},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
